--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -1,16 +1,10 @@
 pipeline {
-    agent { docker 'python:3.5.1' }
+    agent { docker 'php' }
     stages {
         stage('build') {
             steps {
-                sh 'python --version'
+                sh 'php --version'
             }
         }
     }
-
-post {
-  always {
-    archive 'Jenkinsfile/*'
-  }
- }
 }
